--- a/resepsionis/data-arsip.html
+++ b/resepsionis/data-arsip.html
@@ -365,7 +365,6 @@
                                                 <div class="col-md-12">
                                                     <div class="card m-b-30">
                                                         <div class="card-body">
-
                                                             <div id="datatable_wrapper"
                                                                 class="dataTables_wrapper dt-bootstrap4 no-footer">
                                                                 <div
@@ -385,7 +384,9 @@
                                                                                 <option value="50">50</option>
                                                                                 <option value="100">100</option>
                                                                             </select>
-
+                                                                            <label class="mr-3 mb-0">
+                                                                                entries
+                                                                            </label>
                                                                         </div>
                                                                     </div>
 
@@ -405,50 +406,33 @@
                                                                 <div class="row">
                                                                     <div class="col-sm-12">
 
-                                                                        <table class="table">
+                                                                        <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                                             <thead>
                                                                                 <tr>
                                                                                     <th>No</th>
                                                                                     <th>Nama</th>
                                                                                     <th>Jenis arsip</th>
                                                                                     <th>Tanggal Upload</th>
-                                                                                    <th>Tanggal Disposisi</th>
-                                                                                    <th>Status</th>
                                                                                 </tr>
                                                                             </thead>
                                                                             <tbody>
                                                                                 <tr>
                                                                                     <td>1</td>
-                                                                                    <td>Kontrak Kerja Pegawai Divisi
-                                                                                        Marketing</td>
+                                                                                    <td>Kontrak Kerja Pegawai Divisi Marketing</td>
                                                                                     <td>Kontrak Kerja</td>
                                                                                     <td>14 Oktober 2021</td>
-                                                                                    <td>16 Oktober 2021</td>
-                                                                                    <td>
-                                                                                        <font color="blue">Disposisikan
-                                                                                    </td>
-                                                                                    </font>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td>2</td>
-                                                                                    <td>Akte Perusahaan CV Hummasoft
-                                                                                    </td>
+                                                                                    <td>Akte Perusahaan CV Hummasoft</td>
                                                                                     <td>Akte Perusahaan</td>
                                                                                     <td>14 Oktober 2021</td>
-                                                                                    <td>-</td>
-                                                                                    <td>-</td>
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td>3</td>
-                                                                                    <td>NPWP Perusahaan CV Hummasoft
-                                                                                    </td>
+                                                                                    <td>NPWP Perusahaan CV Hummasoft</td>
                                                                                     <td>NPWP</td>
                                                                                     <td>14 Oktober 2021</td>
-                                                                                    <td>16 Oktober 2021</td>
-                                                                                    <td>
-                                                                                        <font color="blue">Disposisikan
-                                                                                    </td>
-                                                                                    </font>
                                                                                 </tr>
 
 
@@ -480,7 +464,9 @@
                                                                                     <option value="50">50</option>
                                                                                     <option value="100">100</option>
                                                                                 </select>
-    
+                                                                                <label class="mr-3 mb-0">
+                                                                                    entries
+                                                                                </label>
                                                                             </div>
                                                                         </div>
     
@@ -497,15 +483,13 @@
                                                                         </div>
                                                                     </div>
 
-                                                                        <table class="table">
+                                                                    <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                                             <thead>
                                                                                 <tr>
                                                                                     <th>No</th>
                                                                                     <th>Nama</th>
                                                                                     <th>Jenis arsip</th>
                                                                                     <th>Tanggal Upload</th>
-                                                                                    <th>Tanggal Disposisi</th>
-                                                                                    <th>Status</th>
 
                                                                                 </tr>
                                                                             </thead>
@@ -515,8 +499,6 @@
                                                                                     <td>CV Pegawai Divisi Marketing</td>
                                                                                     <td>CV</td>
                                                                                     <td>20 Oktober 2021</td>
-                                                                                    <td>-</td>
-                                                                                    <td>-</td>
 
                                                                                 </tr>
                                                                                 <tr>
@@ -525,8 +507,6 @@
                                                                                     </td>
                                                                                     <td>Akte Perusahaan</td>
                                                                                     <td>20 Oktober 2021</td>
-                                                                                    <td>-</td>
-                                                                                    <td>-</td>
                                                                                     </td>
 
                                                                                 </tr>
@@ -536,8 +516,6 @@
                                                                                     </td>
                                                                                     <td>NPWP</td>
                                                                                     <td>20 Oktober 2021</td>
-                                                                                    <td>-</td>
-                                                                                    <td>-</td>
                                                                                 </tr>
 
                                                                                 </tr>
