--- a/resepsionis/surat-keluar.html
+++ b/resepsionis/surat-keluar.html
@@ -241,7 +241,74 @@
                                             <div class="col-12">
                                                 <div class="card m-b-30">
                                                     <div class="card-body">
-                                                                <table class="table">
+                                                        <form action="" method=""></form>
+                                        <div class="container align-items-center">
+                                            <form action="">
+                                                <div class="row">
+                                                    <div class="form-group">
+                                                        <label for="inputMulaiTanggal" class="font-weight-bold">Mulai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputMulaiTanggal" name="mulai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
+                                                    </div>
+                                                    &nbsp&nbsp&nbsp&nbsp
+                                                    <div class="form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">Sampai
+                                                            Tanggal :</label>
+                                                        <input type="date" id="inputSampaiTanggal" name="sampai_tanggal"
+                                                            class="form-control" name="tgl_pemasukan" required>
+                                                    </div>
+                                                    <div class="col-sm-1 form-group">
+                                                        <label for="inputSampaiTanggal" class="font-weight-bold">
+                                                            <font color="white">Disetujui</font>
+                                                        </label>
+                                                        <button type="submit"
+                                                            class="btn btn-primary bt-sm">Cari</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                            <div id="datatable_wrapper"
+                                                                class="dataTables_wrapper dt-bootstrap4 no-footer">
+                                                                <div
+                                                                    class="row align-items-center justify-content-between">
+                                                                    <div class="col-auto py-2">
+                                                                        <div id="datatable_length"
+                                                                            class="dataTables_length d-flex align-items-center">
+                                                                            <label class="mr-3 mb-0">
+                                                                                Show
+                                                                            </label>
+                                                                            <select
+                                                                                class="custom-select custom-select-sm form-control form-control-sm"
+                                                                                name="datatable_length"
+                                                                                aria-controls="datatable">
+                                                                                <option value="10">10</option>
+                                                                                <option value="25">25</option>
+                                                                                <option value="50">50</option>
+                                                                                <option value="100">100</option>
+                                                                            </select>
+                                                                            <label class="mr-3 mb-0">
+                                                                                entries
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div class="col-sm-12 col-md-6">
+                                                                        <div id="datatable_filter"
+                                                                            class="dataTables_filter" align="right">
+                                                                            <label class="m-0">
+                                                                                <input type="search"
+                                                                                    class="form-control form-control-sm"
+                                                                                    placeholder="Search"
+                                                                                    aria-controls="datatable">
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="row">
+                                                                    <div class="col-sm-12">
+                                        </div>
+                                        <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                                     <thead>
                                                                         <tr>
                                                                         
@@ -264,7 +331,7 @@
                                                                             <td>Politeknik Negeri Jember</td>
                                                                             <td>Penerimaan mahasiswa PKL</td>
                                                                             <td>6 Oktober 2021</td>
-                                                                            <td>Disposisikan</td>
+                                                                            <td><font color="blue">Disposisikan</font></td>
                                                                             <td><a href=form-edit-surat-keluar.html>
                                                                                 <button type="button" class="btn-primary">Edit</button></a>
                                                                                 &nbsp
@@ -281,7 +348,7 @@
                                                                             <td>Tokopedia</td>
                                                                             <td>Meeting</td>
                                                                             <td>6 Oktober 2021</td>
-                                                                            <td>Disposisikan</td>
+                                                                            <td><font color="blue">Disposisikan</font></td>
                                                                             <td><a href=form-edit-surat-keluar.html>
                                                                                 <button type="button" class="btn-primary">Edit</button></a>
                                                                                 &nbsp
