--- a/admin/divisi-divisi.html
+++ b/admin/divisi-divisi.html
@@ -309,6 +309,7 @@
                                                                 <div class="row">
                                                                     <div class="col-sm-12">
                                         </div>
+                                    </div>
                                                     <table id="datatable" class="table table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                                 <thead>
                                                     <tr>
