--- a/pimpinan/profile.html
+++ b/pimpinan/profile.html
@@ -288,7 +288,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md d-flex">
-                                                <img src="https://via.placeholder.com/150" alt="" height="150">
+                                                <img src="assets/images/foto.jpg" alt="" height="190">
                                             </div>
                                         </div>
                                     </div>
